# FileFinder

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: run_deployqt_debug.cmake  run_windeployqt_debug.cmake
packaging/: copy_and_package.ps1  copy_and_package.sh  package-linux-arm64.sh  package-linux-x64.sh  package-macos-arm64.sh  package-windows-x64.ps1
resources/: FileFinder.icns  app.qrc  appicon.rc
src/: AboutDialog.cpp  AboutDialog.h  FileFinder.cpp  FileFinder.h  FileSearch.cpp  FileSearch.h  MainWindow.cpp  MainWindow.h  main.cpp
